src/objects/TR1__Hirabl_Account_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>TR1__Auth_Callback__c</fullName>
        <defaultValue>&quot;https://dashboard-hirabl-com-o7fgcgavs3et.runscope.net/oauth2/redirect/talentrover/&quot;</defaultValue>
        <label>Auth Callback</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Auth_Endpoint__c</fullName>
        <defaultValue>&quot;https://login.salesforce.com/services/oauth2/authorize&quot;</defaultValue>
        <label>Auth Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Hirabl_Account__c</fullName>
        <label>Hirabl Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Hirabl_App_Name__c</fullName>
        <defaultValue>&quot;Hirabl for Talent Rover&quot;</defaultValue>
        <label>Hirabl App Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Hirabl_Org_Id__c</fullName>
        <label>Hirabl Org Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Hirabl_Start_URL__c</fullName>
        <defaultValue>&quot;https://dashboard.hirabl.com&quot;</defaultValue>
        <label>Hirabl Start URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Hirabl Account Settings</label>
</CustomObject>